feat: add support for patch, head, trace, options (#17)
