# examples/singleApp/swagger_output.json
@@ -91,7 +91,7 @@
     },
     "/api/v1/song/{id}/*": {
       "put": {
-        "description": "Insert a new song",
+        "description": "Updates a new song",
         "parameters": [
           {
             "description": "The song id",
@@ -99,6 +99,57 @@
             "in": "path",
             "required": true,
             "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "patch": {
+        "description": "Partial updates for a song",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "The song id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "trace": {
+        "description": "Some other stuff (trace)",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "The song id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "head": {
+        "description": "Some other stuff (head)",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "The song id"
           }
         ],
         "responses": {
